src/query_plan/execution/snapshots/tailcall__query_plan__execution__simple__tests__PostAndUser.snap
---
source: src/query_plan/execution/simple.rs
expression: execution_plan
---
Sequential:
    Parallel:
        Resolve(0)
        Resolve(3)
    Resolve(1)
