src/query_plan/execution/snapshots/tailcall__query_plan__execution__simple__tests__PostsComplex.snap
---
source: src/query_plan/execution/simple.rs
expression: execution_plan
---
Sequential:
    Resolve(0)
    Resolve(1)
    Resolve(2)
